# DiscsDatabase

./: CMakeLists.txt  README.txt  db  db.sqlite  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.ini
